fixed responsiveness on tablets

--- a/code/src/index.css
+++ b/code/src/index.css
@@ -132,7 +132,7 @@ ul {
 /* ----------------------------------------------- */
 
 @media only screen and (min-width: 768px) {
-  form {
+  .long-text-form {
     font-size: 25px;
     margin-top: 5%;
   }
@@ -162,10 +162,6 @@ ul {
     margin: 5%;
     width: 40%;
   }
-  form {
-    margin: 1% 25%;
-  }
-
   .short-text-form {
     margin: 10% 20%;
   }
@@ -184,16 +180,20 @@ ul {
     font-size: 20px;
     margin: 5% 25%;
   }
+
+  .long-text-form {
+    margin: 2% 20%;
+  }
 }
 
-@media only screen and (min-width: 1024px) {
-  form {
+@media only screen and (min-width: 1044px) {
+  .long-text-form {
     margin: 3% 25%;
   }
 }
 
 @media only screen and (min-width: 2560px) {
-  form {
+  .long-text-form {
     font-size: 40px;
     margin: 5% 25%;
   }
